# snitch

hw/system/snitch_cluster/cfg/: cluster-single-core.hjson
hw/system/snitch_cluster/sw/: CMakeLists.txt
sw/SpVV/: CMakeLists.txt  SpVSpV.c  SpVV.c  SpVV.h  compare_algorithms.py  generate_data.py  generate_data_spv_spv.py
sw/SpVV/include/: SpVV.h
